discussion/kv_engine/173916/173916_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51805: Pass persistedPrepareSeqno(maxPrepareSeqno) to CkptMgr

We will set the value of the first Checkpoint to this value in a
future change to ensure that the on disk state is correctly updated
if we partially persist a snapshot, restart, and find on streaming
the rest of the snapshot that it does not contain any prepares.

Change-Id: Icc3f1b431c0458005420dfe5c07822128b853c0e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-20 14:58:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-04-20 14:58:32.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/295797/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 16:24:43.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/95/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/95/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/95/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/128/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/94/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15745/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/97/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/95/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/97/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/96/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/98/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/98/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/89/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
